
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int close (int) ;
 int printf (char*,char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int strlen (char*) ;

int get_shell(int bsh)
{
 fd_set rfds;
 int retVal,r;
 char buf[0x31337];
 do {
  FD_ZERO(&rfds);
  FD_SET(0, &rfds);
  FD_SET(bsh, &rfds);
  retVal=select(bsh+1, &rfds, ((void*)0), ((void*)0), ((void*)0));
  if(retVal) {
   if(FD_ISSET(bsh, &rfds)) {

    buf[(r=recv(bsh, buf, 8095,0))]='\0';
    printf("%s", buf);
   }
   if(FD_ISSET(0, &rfds)) {
    buf[(r=read(0, buf, 8095))]='\0';
    send(bsh, buf, strlen(buf), 0);
   }
  }
 } while(retVal && r);

 close(bsh);
 return 1;
}
