; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_23492.c_get_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_23492.c_get_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_shell(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [201527 x i8], align 16
  store i32 %0, i32* %2, align 4
  br label %7

7:                                                ; preds = %50, %1
  %8 = call i32 @FD_ZERO(i32* %3)
  %9 = call i32 @FD_SET(i32 0, i32* %3)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @FD_SET(i32 %10, i32* %3)
  %12 = load i32, i32* %2, align 4
  %13 = add nsw i32 %12, 1
  %14 = call i32 @select(i32 %13, i32* %3, i32* null, i32* null, i32* null)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %43

17:                                               ; preds = %7
  %18 = load i32, i32* %2, align 4
  %19 = call i64 @FD_ISSET(i32 %18, i32* %3)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %17
  %22 = load i32, i32* %2, align 4
  %23 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 0
  %24 = call i32 @recv(i32 %22, i8* %23, i32 8095, i32 0)
  store i32 %24, i32* %5, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 %25
  store i8 0, i8* %26, align 1
  %27 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 0
  %28 = call i32 @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %27)
  br label %29

29:                                               ; preds = %21, %17
  %30 = call i64 @FD_ISSET(i32 0, i32* %3)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %42

32:                                               ; preds = %29
  %33 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 0
  %34 = call i32 @read(i32 0, i8* %33, i32 8095)
  store i32 %34, i32* %5, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 %35
  store i8 0, i8* %36, align 1
  %37 = load i32, i32* %2, align 4
  %38 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 0
  %39 = getelementptr inbounds [201527 x i8], [201527 x i8]* %6, i64 0, i64 0
  %40 = call i32 @strlen(i8* %39)
  %41 = call i32 @send(i32 %37, i8* %38, i32 %40, i32 0)
  br label %42

42:                                               ; preds = %32, %29
  br label %43

43:                                               ; preds = %42, %7
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %4, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %44
  %48 = load i32, i32* %5, align 4
  %49 = icmp ne i32 %48, 0
  br label %50

50:                                               ; preds = %47, %44
  %51 = phi i1 [ false, %44 ], [ %49, %47 ]
  br i1 %51, label %7, label %52

52:                                               ; preds = %50
  %53 = load i32, i32* %2, align 4
  %54 = call i32 @close(i32 %53)
  ret i32 1
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
